# HIFDE3D

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: CMakeDummyFunction.cpp  config.h.cmake
cmake/toolchains/: BGP-xl_aug2011-essl_4.4.1-1.cmake  Lonestar-intel_11.1-mvapich2_1.6-mkl_10.3.cmake
include/: Factor.hpp  ID.hpp  IndexData.hpp  InterpDecomp.hpp  Schur.hpp  blas.h  blas.hpp  common.hpp  data.hpp  dense.hpp  dmhm.hpp  environment.hpp  hifde3d.hpp  hmat_tools.hpp  lapack.hpp  mpi.hpp  nummat.hpp  numtns.hpp  numvec.hpp  schur_interior.hpp  setup_stencil.hpp  sparse.hpp  timer.hpp  tools.hpp  vec3t.hpp  vector.hpp
include/dmhm/: config.h
include/dmhm/core/: choice.hpp  dense.hpp  hmat_tools.hpp  lapack.hpp  low_rank.hpp  memory_map.hpp  mpi_choice.hpp  random.hpp  sparse.hpp  timer.hpp  vector.hpp
include/hifde3d/: config.h
include/hifde3d/core/: blas.hpp  choice.hpp  dense.hpp  environment.hpp  hmat_tools.hpp  lapack.hpp  low_rank.hpp  memory_map.hpp  mpi.hpp  mpi_choice.hpp  random.hpp  sparse.hpp  timer.hpp  vector.hpp
src/: Apply.cpp  Factor.cpp  ID.cpp  InterpDecomp.cpp  global.cpp  main.cpp
src/hmat_tools/: Add.cpp  AdjointMultiplyMatrix.cpp  AdjointMultiplyVector.cpp  Compress.cpp  ConvertSubmatrix.cpp  Invert.cpp  MultiplyAdjoint.cpp  MultiplyMatrix.cpp  MultiplyTranspose.cpp  MultiplyVector.cpp  PackedQR.cpp  RoundedAdd.cpp  RoundedUpdate.cpp  TransposeMultiplyMatrix.cpp  TransposeMultiplyVector.cpp  Update.cpp
tests/HIFDE3D/: Sparse_test.cpp  darcy.cpp  main.cpp
